--- a/Latex/paper.tex
+++ b/Latex/paper.tex
@@ -58,7 +58,7 @@ While this paper deals with internet experiments in general, it continuously ref
 \subsection{System requirements}
 % What are the system requirements for \Cree?
 
-\Cree requires a server, ie. any computer with \emph{Node.js} installed. \Cree has several dependencies -- because it is built on general-purpose software libraries -- however all of these dependencies are automatically installed, or come pre-bundled, with \Cree. The server will need to be connected to the devices used by the subject, either through the internet or though a local network (eg. WiFi). 
+\Cree requires a server, ie. any computer with \emph{Node.js} installed. \Cree has several dependencies -- because it is built on general-purpose software libraries -- however all of these dependencies are automatically installed, or come pre-bundled, with \Cree. The server will need to be connected to the devices used by the subject, either through the internet or through a local network (eg. WiFi). 
 
 \begin{figure}[h!]
   \caption{Schematic overview of the network setup with server and clients}
@@ -68,13 +68,13 @@ While this paper deals with internet experiments in general, it continuously ref
 
 Subjects access \Cree experiments though an web browser. Any modern web browser will suffice\footnotemark[1], which means that subjects can participate in experiments using smart-phones, tablets, or any computer (Windows, Mac, Linux). Every subject will need a device. The researcher can choose to provide devices, or have subjects use their own personal devices.
 
-\footnotetext[1]{A modern web browser is either: IE version 9+, Chrome current version, Firefox current version, OSX Safari version 5.1+, Opera version 12.1+, iOS Safari version 6.1+, or Android Browser version 4.0+. The browser must allow JavaScript, which all browsers due by default. \Cree automatically check that these requirements are met, before the subject is allowed to enter the experiment.}
+\footnotetext[1]{A modern web browser is either: IE version 9+, Chrome current version, Firefox current version, OS X Safari version 5.1+, Opera version 12.1+, iOS Safari version 6.1+, or Android Browser version 4.0+. The browser must allow JavaScript, which all browsers due by default. \Cree automatically check that these requirements are met, before the subject is allowed to enter the experiment.}
 
 \subsection{Alternative toolboxes}
 \label{SS:Alternatives}
 % What are the alternative toolboxes and how do they compare to Cree?
 
-\emph{z-Tree} is currently the commonly used toolbox for conducting economic experiments. The development of \emph{z-Tree} started in 1995 and has been updated continuously \citep{Fischbacher_2007}. However the foundation and guiding principles of \emph{z-Tree} is based on the technology that was available two decades ago. Several other toolboxes exist that can run economic experiments. Below I divide the the toolboxes into four categories based on the restrictions they places on the equipment facing subjects:
+\emph{z-Tree} is currently the commonly used toolbox for conducting economic experiments. The development of \emph{z-Tree} started in 1995 and has been updated continuously \citep{Fischbacher_2007}. However the foundation and guiding principles of \emph{z-Tree} is based on the technology that was available two decades ago. Several other toolboxes exist that can run economic experiments. Below I divide the the toolboxes into four categories based on the restrictions they place on the equipment facing subjects:
 
 \begin{table}[h!]
 \begin{tabular}{ l p{0.7\textwidth} }
@@ -85,7 +85,7 @@ Subjects access \Cree experiments though an web browser. Any modern web browser 
 \end{tabular}
 \end{table}
 
-Toolboxes, such as \emph{z-Tree}, are applications. They are written for a specific operating system, and will only run on that specific operating system. All toolboxes in this category requires Microsoft Windows. These applications are not easily ported to other computer operating systems. And they will require a complete restructuring -- focused on optimising screen sizes and battery life -- if they are every to run on smart-phones or tablets. In addition, applications will have to be downloaded (and installed) on the computer facing subjects, before they can participate in experiments. This requirement hinders subjects from using their personal devices.
+Toolboxes, such as \emph{z-Tree}, are applications. They are written for a specific operating system, and will only run on that specific operating system. All toolboxes in this category requires Microsoft Windows. These applications are not easily ported to other computer operating systems. And they will require a complete restructuring -- focused on optimising screen sizes and battery life -- if they are ever to run on smart-phones or tablets. In addition, applications will have to be downloaded (and installed) on the computer facing subjects, before they can participate in experiments. This requirement hinders subjects from using their personal devices.
 
 The second category contains toolboxes written in \emph{Python}. Python is platform independent, so these toolboxes can run on several operating systems, but they require that Python is installed on the equipment facing subjects\footnotemark[2]. These toolboxes also require downloading software.
 
@@ -93,7 +93,7 @@ The second category contains toolboxes written in \emph{Python}. Python is platf
 
 Toolboxes in the third category are written in \emph{Java}. These are less restrictive, since subjects can participate in experiments though a web browser that has the Java-plugin. Thus there is no need to predownload or preinstall software on the equipment facing subjects. While the Java-plugin is widely distributed, it is not universal\footnotemark[3]. And increasing concerns regarding security issues with the Java-plugin has lead browsers manufactures to implement various warnings and hindrances\footnotemark[4]. 
 
-\footnotetext[3]{A Millward Brown survey from 2011 found a penetration rate of 73\% on PCs in mature markets. Source: \url{http://www.adobe.com/mena_en/products/flashplatformruntimes/statistics.html}. This is also mimicked on the server-side with only 0.1\% of websites using Java. Source: \url{http://w3techs.com/technologies/overview/client_side_language/all}. The Java-plugin is not supported on iOS nor Android. Source: \url{http://www.java.com/en/download/faq/java_mobile.xml}.}
+\footnotetext[3]{A Millward Brown survey from 2011 found a penetration rate of 73\% on PCs in mature markets. Source: \url{http://www.adobe.com/mena_en/products/flashplatformruntimes/statistics.html}. This is also mimicked on the server-side with only 0.1\% of websites using Java. Source: \url{http://w3techs.com/technologies/overview/client_side_language/all}. The Java-plugin is not supported on iOS or Android. Source: \url{http://www.java.com/en/download/faq/java_mobile.xml}.}
  
 \footnotetext[4]{Eg. due to security concerns by default the Java-plugin is disabled in Google Chrome version 42 (released April 2015). Source: \url{https://www.java.com/en/download/faq/chrome.xml}.}
 
@@ -108,12 +108,12 @@ The fourth category of toolboxes run natively in the web browser, without the ne
 
 The method used to recruit subjects will depend on the type of experiment and the desired representativeness of subjects. 
 
-It is commonly assumed that subjects are \emph{naïve}, eg. encounter the experimental material for the first time, and have no a priori knowledge of the experiment, the purpose, nor knowledge of related experiments. This is not true for experiments conducted over the internet, and is often misapprehended by researchers, as shown by \citet*{Chandler_Mueller_Paolacci_2014}. They investigate experiments where subjects are recruited through Amazon's \emph{Mechanical Turk} system. \emph{Mechanical Turk} is a crowdsourcing platform of 500,000 workers that perform mostly small tasks and are paid a piece rate. Every worker has an account, and \emph{Mechanical Turk} prevents an account from preforming the same task twice. \cite{Chandler_Mueller_Paolacci_2014} find that: 
+It is commonly assumed that subjects are \emph{naïve}, eg. encounter the experimental material for the first time, and have no a priori knowledge of the experiment, the purpose, nor knowledge of related experiments. This is not true for experiments conducted over the internet, and is often misapprehended by researchers, as shown by \citet*{Chandler_Mueller_Paolacci_2014}. They investigate experiments where subjects are recruited through Amazon's \emph{Mechanical Turk} system. \emph{Mechanical Turk} is a crowdsourcing platform of 500,000 workers that perform mostly small tasks and are paid a piece rate. Every worker has an account, and \emph{Mechanical Turk} prevents an account from performing the same task twice. \cite{Chandler_Mueller_Paolacci_2014} find that: 
 
 \begin{enumerate}
 \item subjects have experience from related experiments. By pooling 16,408 observations (or completed tasks) across 132 studies, they find just 7,498 unique subjects -- averaging 2.24 observation per subject. The 10\% most prolific subjects account for 41\% of all observations. In addition \cite{Chandler_Mueller_Paolacci_2014} survey 300 workers on \emph{Mechanical Turk} and find that 56\% have previously been exposed to the \emph{Prisoner's dilemma} and 52\% to the \emph{Ultimatum game}. 
-\item subjects share information about experiments. About one fourth of workers in the \cite{Chandler_Mueller_Paolacci_2014} survey respectively report they know other workers in person, and that they read or discuss \emph{Mechanical Turk} online on blogs and forums. The focus of the conversation is typically not the specific contents of the experiment, but rather pay rates and reputation. \cite{Chandler_Mueller_Paolacci_2014} conclude that researchers should be particular aware of cross talk, when information can increase financial rewards -- such as when using techniques to increase attention (\emph{instructional manipulation checks}, or \emph{got-cha} questions), or when using techniques to deny payment. They suggest that researchers asks subjects how they found the experiment, and monitor discussion boards that refer a lot of subjects to the experiment.
-\item few subjects attempt to participate repeatedly in the same experiment. Amazon forbids multiply or \emph{sock-puppet} accounts, and actively enforces this policy. \cite{Chandler_Mueller_Paolacci_2014} find 1.2\% of subjects share IP adresses as well as demographic characteristics -- eg. possible \emph{sock-puppet} accounts. They attribute the low percentage to the active enforcement by Amazon.
+\item subjects share information about experiments. About one fourth of workers in the \cite{Chandler_Mueller_Paolacci_2014} survey respectively report they know other workers in person, and that they read or discuss \emph{Mechanical Turk} online on blogs and forums. The focus of the conversation is typically not the specific contents of the experiment, but rather pay rates and reputation. \cite{Chandler_Mueller_Paolacci_2014} conclude that researchers should be particularly aware of cross talk, when information can increase financial rewards -- such as when using techniques to increase attention (\emph{instructional manipulation checks}, or \emph{got-cha} questions), or when using techniques to deny payment. They suggest that researchers asks subjects how they found the experiment, and monitor discussion boards that refer a lot of subjects to the experiment.
+\item few subjects attempt to participate repeatedly in the same experiment. Amazon forbids multiply or \emph{sock-puppet} accounts, and actively enforces this policy. \cite{Chandler_Mueller_Paolacci_2014} find 1.2\% of subjects share IP addresses as well as demographic characteristics -- eg. possible \emph{sock-puppet} accounts. They attribute the low percentage to the active enforcement by Amazon.
 \end{enumerate}
 
 Internet experiments in general and \emph{extra-laboratory} experiments, are likely to face similar issues. Especially considering \citet*{Goodman_Cryder_Cheema_2013} find that, in all the studies they looked at, \emph{Mechanical Turk} subjects are not significantly different from traditional samples, except one study (on risk aversion).
@@ -123,18 +123,18 @@ Internet experiments in general and \emph{extra-laboratory} experiments, are lik
 \subsection{Coordinated joining}
 % How do subjects join an experiment and how to coordinate subjects?
 
-When the researcher initiates the experiment, \Cree returns the URL adresses, that subjects use to join the experiment. Two URLs are displayed, since subjects can participate over the internet and through the local network. URLs should be distributed accordingly. The researcher distributes the URL to participants (via printed hand-outs, e-mail, third-party recruitment system, etc). Subjects join the experiment simply by clicking a link, or by typing the URL into their web browser. \Cree automatically tests if the server can connect to the internet, if this fails then \Cree only displays the local network URL\footnotemark[5]. 
+When the researcher initiates the experiment, \Cree returns the URL addresses, that subjects use to join the experiment. Two URLs are displayed, since subjects can participate over the internet and through the local network. URLs should be distributed accordingly. The researcher distributes the URL to participants (via printed hand-outs, e-mail, third-party recruitment system, etc). Subjects join the experiment simply by clicking a link, or by typing the URL into their web browser. \Cree automatically tests if the server can connect to the internet, if this fails then \Cree only displays the local network URL\footnotemark[5]. 
 
 \footnotetext[5]{\Cree does not test whether access to the server is blocked by a firewall, nor if the two required ports are open.}
 
-Besides recruitment and distribution of adresses, there is coordination. In experiments where subjects interact with each other in real-time, the researcher must coordinate subjects so they start the experiment simultaneously. The researcher can specify that \Cree should wait for sufficiently many subjects to join, before starting the session. Ie. the first subject joining will be put on hold, until the last required subject joins. Subjects have limited patience, so the researcher needs to coordinate subjects on a very narrow interval of only a few minutes. There are a couple of different approaches that the researcher can take here. In laboratory experiments it is common to invite more participants than needed for a given session (due to ``no shows''). This option is also possible in \Cree, since \Cree turns down subjects once a session is filled. There is a semi-continues option that expands the interval. Fore instance in the \emph{Prisoner's dilemma} it is common with only two subjects interacting with each other. So instead of waiting for all subjects to join the session, the semi-continuous option will start whenever two new subjects join. However with this option the researcher losses the ability to randomise subjects, ie. pair a subject with another. The lack of randomisation may lead to reciprocity among subjects. There is a third fully-continuous option, where the server simply restarts the experiment after each session. This option can be used in conjunction with fewer subjects per session. If subjects show up late for the first session, they wait for the session to end, whereafter they can join the second session, and so on. All of this continues until the researcher manually stops the experiment.
+Besides recruitment and distribution of addresses, there is coordination. In experiments where subjects interact with each other in real-time, the researcher must coordinate subjects so they start the experiment simultaneously. The researcher can specify that \Cree should wait for sufficiently many subjects to join, before starting the session. Ie. the first subject joining will be put on hold, until the last required subject joins. Subjects have limited patience, so the researcher needs to coordinate subjects on a very narrow interval of only a few minutes. There are a couple of different approaches that the researcher can take here. In laboratory experiments it is common to invite more participants than needed for a given session (due to ``no shows''). This option is also possible in \Cree, since \Cree turns down subjects once a session is filled. There is a semi-continuous option that expands the interval. For instance in the \emph{Prisoner's dilemma} it is common with only two subjects interacting with each other. So instead of waiting for all subjects to join the session, the semi-continuous option will start whenever two new subjects join. However with this option the researcher loses the ability to randomise subjects, ie. pair a subject with another. The lack of randomisation may lead to reciprocity among subjects. There is a third fully-continuous option, where the server simply restarts the experiment after each session. This option can be used in conjunction with fewer subjects per session. If subjects show up late for the first session, they wait for the session to end, whereafter they can join the second session, and so on. All of this continues until the researcher manually stops the experiment.
 
 \subsection{Stability}
 % Is Cree stable?
 
 A main priority for researchers is that the software they use to run experiments is stable. Crashes are not only costly and time consuming, but also detrimental to the researcher's reputation among the participating subjects. 
 
-There are two stability objectives; The first is eliminating software bugs, ie. faults causing the software to preform in an unintended or unanticipated manner, and due to the error of the programmer. The second is sufficient error handling, ie. implementing fallbacks to deal with mishaps, so crashes are mitigated, or at the very least an emergency landing is preformed.
+There are two stability objectives; The first is eliminating software bugs, ie. faults causing the software to perform in an unintended or unanticipated manner, and due to the error of the programmer. The second is sufficient error handling, ie. implementing fallbacks to deal with mishaps, so crashes are mitigated, or at the very least an emergency landing is performed.
 
 Both stability aspects require thorough testing and running countless experiments using the software. \Cree does not have a 20-year track record like \emph{z-Tree}, but nor is it build from scratch. The software libraries and dependencies on which \Cree is build, have been tested intensively by their respective communities. Some libraries are used daily across millions of websites\footnotemark[6]. This speaks volumes to the infrequency of software bugs in the foundation of \Cree.
 
@@ -155,15 +155,15 @@ If subjects attempt to abort the experiment untimely, \Cree displays a warning m
 \subsection{Duration and supervision}
 % Can you run hour-long experiments over the internet (eg. after how long to unsupervised subjects stop paying attention)?
 
-Laboratory experiment can often last an hour or more. There is very little literature on how unsupervised subjects preform in  experiments with long sessions. 
+Laboratory experiment can often last an hour or more. There is very little literature on how unsupervised subjects perform in  experiments with long sessions. 
 
 Using \emph{instructional manipulation checks} \citet*{Oppenheimer_Meyvis_Davidenko_2009} show that student subjects pay less attention when unsupervised.
 
-\cite{Goodman_Cryder_Cheema_2013} argue that \emph{Mechanical Turk} may not be appropriate for long or complicated experiments. They compare the results of their experiment -- which lasted about 16 minuts -- to that of \citet*{Paolacci_Chandler_Ipeirotis_2010} that only lasted around 5 minutes. Unlike \cite{Paolacci_Chandler_Ipeirotis_2010} they find that subjects from \emph{Mechanical Turk} are less attentive. They test attentiveness using \emph{instructional manipulation checks} at the end of the survey.
+\cite{Goodman_Cryder_Cheema_2013} argue that \emph{Mechanical Turk} may not be appropriate for long or complicated experiments. They compare the results of their experiment -- which lasted about 16 minutes -- to that of \citet*{Paolacci_Chandler_Ipeirotis_2010} that only lasted around 5 minutes. Unlike \cite{Paolacci_Chandler_Ipeirotis_2010} they find that subjects from \emph{Mechanical Turk} are less attentive. They test attentiveness using \emph{instructional manipulation checks} at the end of the survey.
 
 \citet*{Farrell_Grenier_Leiby_2014} run an hour-long experiment on \emph{Mechanical Turk} where subjects fulfil orders (sandwich orders or unspecified product orders). They find that \emph{Mechanical Turk} subjects exert the same amount of effort (or more), and make the same amount of mistakes (or fewer), than student participants. Even in the treatment where \emph{Mechanical Turk} subjects are paid one-fifth of the student participants, where tasks are less intrinsically interesting, and where their wage rate is independent of performance (flat rate of \$5).
 
-The results of \cite{Farrell_Grenier_Leiby_2014} may be due to the selection process, ie. the \emph{Mechanical Turk} subjects that volunteer for their experiment, are more motivated by financial incentives, than other individuals. An indication of this is that 73\% report `extra income' and 28\% report `enterainment' as reasons for using \emph{Mechanical Turk}. Whereas in the \cite{Paolacci_Chandler_Ipeirotis_2010} study it is respectively 61\% and 41\%. Similarly in a short survey by \cite{Williamson_2014} on \emph{Mechanical Turk} only 28.9\% respond that they would be willing to participate in a hour-long follow-up interview for an additional \$15.
+The results of \cite{Farrell_Grenier_Leiby_2014} may be due to the selection process, ie. the \emph{Mechanical Turk} subjects that volunteer for their experiment, are more motivated by financial incentives, than other individuals. An indication of this is that 73\% report `extra income' and 28\% report `entertainment' as reasons for using \emph{Mechanical Turk}. Whereas in the \cite{Paolacci_Chandler_Ipeirotis_2010} study it is respectively 61\% and 41\%. Similarly in a short survey by \cite{Williamson_2014} on \emph{Mechanical Turk} only 28.9\% respond that they would be willing to participate in a hour-long follow-up interview for an additional \$15.
 
 In sum the researcher needs to carefully consider the selection process, to ensure that subjects are representative and that results have general validity. When subjects ability to self-select into experiments is restricted, it remains unclear if subjects will participate in hour-long experiments, and it is unclear how attentive they are during these long unsupervised sessions.
 
@@ -182,7 +182,7 @@ Subjects may have questions regarding instructions or procedures during the expe
 \subsection{Cheating}
 % How to avoid cheating?
 
-Discouraging cheating in unsupervised experiments is difficult. And additional considerations are needed since subjects participate in experiments using a web browser. First, \cite{Goodman_Cryder_Cheema_2013} have shown that \emph{Mechanical Turk} subjects search for the correct answers to factual questions on the internet. Subjects look up answers, even when payment is independent of answering correctly. And when subjects are paid for the correct answer, they are more likely to look up the answer. Asking subjects not to use any externals sources reduces the number of subjects that look up the answer, but it does not completely eliminate cheating. Secondly, toolboxes that are native to the web browser are at a disadvantage compared to the toolboxes in the three other categories (discussed in section~\ref{SS:Alternatives}), since pages are rendered in the subject's web browser. Thus the source code to the unrendered pages is easily viewable and relatively easy to manipulate \citep[25m. 12s.]{Hawkes_2011}. In \Cree Subjects cannot cheat by manipulating how the page is rendered, since the server has final authority and controls the experiment. But subjects may attempt to cheat by sending false or manipulated inputs back to the server. It is therefore crucial, when the researcher designs the experiment, that all inputs are validated on the server. In addition since the source code of the page is accesable, it should not contain information that disclose the purpose of the experiment, the treatment, nor optimal strategies -- eg. instead of using variables names such as \texttt{Option\_Nash\_Equilibrium} and \texttt{Option\_Sub\_Optimal}, the researcher should use generic names such as \texttt{OptionX} and \texttt{OptionY}. A third issue is coercion among subjects. Coercion may arise in unsupervised in-person experiments were subjects are seated closely (ie. classrooms, work places, etc.), or in internet experiments were subjects are able to self-select into the experiment, and therefore invite others to join with the aim of manipulating the experiment. In \Cree the researcher can randomise subjects across groups, roles and treatments, but other than this \Cree cannot alleviate coercion. If possible it is recommended that in-person experiments are supervised. And researchers should limit the subject's ability to self-select into the experiment, when conducting experiments over the internet. 
+Discouraging cheating in unsupervised experiments is difficult. And additional considerations are needed since subjects participate in experiments using a web browser. First, \cite{Goodman_Cryder_Cheema_2013} have shown that \emph{Mechanical Turk} subjects search for the correct answers to factual questions on the internet. Subjects look up answers, even when payment is independent of answering correctly. And when subjects are paid for the correct answer, they are more likely to look up the answer. Asking subjects not to use any externals sources reduces the number of subjects that look up the answer, but it does not completely eliminate cheating. Secondly, toolboxes that are native to the web browser are at a disadvantage compared to the toolboxes in the three other categories (discussed in section~\ref{SS:Alternatives}), since pages are rendered in the subject's web browser. Thus the source code to the unrendered pages is easily viewable and relatively easy to manipulate \citep[25m. 12s.]{Hawkes_2011}. In \Cree Subjects cannot cheat by manipulating how the page is rendered, since the server has final authority and controls the experiment. But subjects may attempt to cheat by sending false or manipulated inputs back to the server. It is therefore crucial, when the researcher designs the experiment, that all inputs are validated on the server. In addition since the source code of the page is accessible, it should not contain information that disclose the purpose of the experiment, the treatment, nor optimal strategies -- eg. instead of using variables names such as \texttt{Option\_Nash\_Equilibrium} and \texttt{Option\_Sub\_Optimal}, the researcher should use generic names such as \texttt{OptionX} and \texttt{OptionY}. A third issue is coercion among subjects. Coercion may arise in unsupervised in-person experiments where subjects are seated closely (ie. classrooms, work places, etc.), or in internet experiments where subjects are able to self-select into the experiment, and therefore invite others to join with the aim of manipulating the experiment. In \Cree the researcher can randomise subjects across groups, roles and treatments, but other than this \Cree cannot alleviate coercion. If possible it is recommended that in-person experiments are supervised. And researchers should limit the subject's ability to self-select into the experiment, when conducting experiments over the internet. 
 
 
 \section{Results}
@@ -193,12 +193,12 @@ Discouraging cheating in unsupervised experiments is difficult. And additional c
 
 \cite{Charness_Gneezy_Kuhn_2013} look across different studies and compare the results from  laboratory settings to those from \emph{extra-laboratory} settings. In the \emph{Ultimatum game}, studies in the laboratory have not been able to find a relationship between the stakes (ie. the amount of money that the subjects can split) and the frequency of rejections. Whereas an \emph{extra-laboratory} study in villages in rural India find that higher stakes leads to less frequent rejections. Laboratory studies on the \emph{Public-goods} game yields the same results as a \emph{extra-laboratory} study among card traders at a sports-card event. In the \emph{Trust game}, a study using respectively students in a laboratory and users from the online game \emph{Second Life}, find that subjects from the gaming community are more willing to pay a social-distance premium, and that second movers pass higher amounts back. Another study looks at the closely related \emph{lost-wallet} game. This study finds few differences in the results across their three environments; laboratory, classroom and online. With regard to risk and time preferences, a laboratory study among US students elicit discount rates that are twice as high as credit card rates. Whereas an \emph{extra-laboratory} study using a representative sample of Danish adults elicit discount rates that are above mortgage and auto rates, but below credit card rates. In laboratory settings subjects show high aversion to risk. However a \emph{extra-laboratory} study among evacuees of Hurricane Katrina living in shelters, establish risk-seeking behaviour. Repeating the study a year later with a similar population shows that this behaviour diminishes over time. As noted earlier \cite{Goodman_Cryder_Cheema_2013} find that \emph{Mechanical Turk} subjects are not significantly different in their behaviour from traditional samples, except in one study on risk aversion.
 
-This short walkthrough indicates that the behaviour observed in laboratories for most part also holds outside of the laboratory. But perhaps not in other cultures, or with extremely high pay outs (such as rural India). Similarly social preferences differ when subjects self-identify with a community (the gamers). And the researcher should be particular observant of the selection process when conducting experiments on risk or time preferences, since both age and circumstances will affect experimental results.
+This short walkthrough indicates that the behaviour observed in laboratories for most part also holds outside of the laboratory. But perhaps not in other cultures, or with extremely high payouts (such as rural India). Similarly social preferences differ when subjects self-identify with a community (the gamers). And the researcher should be particularly observant of the selection process when conducting experiments on risk or time preferences, since both age and circumstances will affect experimental results.
 
 \subsection{Devices}
 % Will the results of my experiment depend on the devices used by subjects
 
-There is yet no research on how or if results are influenced by the devices used by subjects in experiments. \Cree records the type of device used by subjects, as well as the screen size. The researcher can use this to post hoc control for differences in the results. Alternatively the researcher can a priori exclude specific devices from participating in the experiment. This may be particular useful in experiments where the subject's reaction time is critical (such as experiments on auctions). I expect that subjects using smart-phones react slower, than subjects on other types of devices. In part due to lower processing power and screen size, but also due to the different input method. The screen, keyboard and mouse are separated on a computer, while on a smart-phone the mouse and keyboard are built into a screen, that only covers about one-fourteenth of the area of a computer screen. Subjects with a smart-phone would be at a disadvantage when entering text or numbers repetitively and at length, or when constantly having to switch between keyboard and pointing. Another alternative is levering the playing field, by using similar input method across all devices. \cite{Choi_Fisman_Gale_Kariv_2007} proposed using a graphical interface. Fore instance, if the subject is asked to allocate an amount to consumption out of a budget of \$100. Then instead of entering this amount into a form, there is a line graphically representing the \$100 budget, and the subject simply clicks accordingly on the line to input his or her allocation. Similar method has also been implemented by \cite{Pettit_Friedman_Kephart_Oprea_2014} in the \emph{ConG} toolbox. \Cree leverages the JavaScript library \emph{D3.js} to build graphics.
+There is yet no research on how or if results are influenced by the devices used by subjects in experiments. \Cree records the type of device used by subjects, as well as the screen size. The researcher can use this to post hoc control for differences in the results. Alternatively the researcher can a priori exclude specific devices from participating in the experiment. This may be particular useful in experiments where the subject's reaction time is critical (such as experiments on auctions). I expect that subjects using smart-phones react slower, than subjects on other types of devices. In part due to lower processing power and screen size, but also due to the different input method. The screen, keyboard and mouse are separated on a computer, while on a smart-phone the mouse and keyboard are built into a screen, that only covers about one-fourteenth of the area of a computer screen. Subjects with a smart-phone would be at a disadvantage when entering text or numbers repetitively and at length, or when constantly having to switch between keyboard and pointing. Another alternative is levering the playing field, by using similar input method across all devices. \cite{Choi_Fisman_Gale_Kariv_2007} proposed using a graphical interface. For instance, if the subject is asked to allocate an amount to consumption out of a budget of \$100. Then instead of entering this amount into a form, there is a line graphically representing the \$100 budget, and the subject simply clicks accordingly on the line to input his or her allocation. Similar method has also been implemented by \cite{Pettit_Friedman_Kephart_Oprea_2014} in the \emph{ConG} toolbox. \Cree leverages the JavaScript library \emph{D3.js} to build graphics.
 
 \subsection{Control}
 % How do I correctly exclude/control for participant characteristics?
@@ -229,7 +229,7 @@ There are some misconception that I would like to address.
 \item All toolboxes essentially require some programming skills. It is true that some toolboxes allow researchers to run preprogrammed experiments, without any additional programming. But once the researcher starts building own experiments, or significantly modifies existing experiments, programming is unavoidable. A programming language is nothing more than human logic and instructions in a machine interpretable format, and this is why programming is unavoidable when researchers build logic into their experiments.
 \end{enumerate}
 
-The guiding principle behind \Cree is to offer a solid and highly flexible foundation, that gives researchers the necessary tools to carry out their research, irrespective of location and available devices. The current version of \Cree does require some programming skills. An interface -- providing convenience when running preprogrammed experiments and when implementing minor changes -- could be added on top of this foundation in a future version. The interface would be a supplement. But with the foundation in order, this would not be at the expense of the general flexibility of \Cree. \Cree relies on JavaScript to build logic into experiments. Because JavaScript is a general-purpose programming language and widely used, many of the procedures necessary to build more complex experiments are already easily available. Thereby avoiding the trap noted by \citet[p. 177]{Fischbacher_2007} when discussing the current limitations of \emph{z-tree}; \emph{``there are situations in which programming is unnecessarily complicated, since z-Tree neither knows procedures nor complex data types ... One of the planned future steps in the development of z-Tree is thus an extension of the programming language to make programming of more complex experiments easier''}. \Cree uses the CSS framework \emph{Bootstrap}, which insures that pages scale seamlessly across small and big screens. In addition it insures that pages look identical across different browsers and devices, for given screen sizes. Since Bootstrap handles all this, knowledge of CSS is not need to build elegant experiments that have a consistent look across devices. Some knowledge of HTML is  helpful, but not required since the researcher can use third-party drag and drop tools such as \emph{LayoutIt!} or \emph{Jetstrap} to build pages that work with \emph{Bootstrap}\footnotemark[8].
+The guiding principle behind \Cree is to offer a solid and highly flexible foundation, that gives researchers the necessary tools to carry out their research, irrespective of location and available devices. The current version of \Cree does require some programming skills. An interface -- providing convenience when running preprogrammed experiments and when implementing minor changes -- could be added on top of this foundation in a future version. The interface would be a supplement. But with the foundation in order, this would not be at the expense of the general flexibility of \Cree. \Cree relies on JavaScript to build logic into experiments. Because JavaScript is a general-purpose programming language and widely used, many of the procedures necessary to build more complex experiments are already easily available. Thereby avoiding the trap noted by \citet[p. 177]{Fischbacher_2007} when discussing the current limitations of \emph{z-tree}; \emph{``there are situations in which programming is unnecessarily complicated, since z-Tree neither knows procedures nor complex data types ... One of the planned future steps in the development of z-Tree is thus an extension of the programming language to make programming of more complex experiments easier''}. \Cree uses the CSS framework \emph{Bootstrap}, which insures that pages scale seamlessly across small and big screens. In addition it ensures that pages look identical across different browsers and devices, for given screen sizes. Since Bootstrap handles all this, knowledge of CSS is not need to build elegant experiments that have a consistent look across devices. Some knowledge of HTML is  helpful, but not required since the researcher can use third-party drag and drop tools such as \emph{LayoutIt!} or \emph{Jetstrap} to build pages that work with \emph{Bootstrap}\footnotemark[8].
 
 \footnotetext[8]{Source: \url{https://jetstrap.com}. Source: \url{http://www.layoutit.com}}
 
